--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 <body>
    <div class="main-login">
-    <div class="left-login"></div>
-        <h1>Faça login<br> e crie relacionamentos </h1>
+    <div class="left-login">
+      <h1>Faça login<br> e crie relacionamentos </h1>
+    </div>
+        
     <div class="right login"></div>
         <div class="card-login">
             <h1>LOGIN</h1>
